# bd_con_sim

./: .clang-format  .gitignore  CMakeLists.txt  CODING_STANDARDS.md  README.md  build_and_run.bat  build_debug.bat  build_release.bat  run_game.bat  setup_libs.bat
.copilot/: conventions.md
assets/fonts/: .gitkeep
assets/maps/: .gitkeep
assets/sounds/: .gitkeep
docs/: LIBRARIES.md
include/entities/: objects.h
include/game/: Game.hpp
include/rendering/: Render.hpp  fragment_shader.h  rasterize.h  vertex_shader.h  window.h
include/utils/: functions.h  globals.h  key_captures.h  my_math.hpp  stb_truetype_wrapper.h
src/: main.cpp
src/game/: Game.cpp
src/rendering/: Render.cpp  raterize.cpp  window.cpp
src/utils/: globals.cpp  key_captures.cpp  stb_truetype_warpper.cpp
tests/: .gitkeep
